// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DataAccessReportsDetailsPanel /> renders DataAccessReports detailsPanel 1`] = `
<styled.div
  id="dtpanel-data-access-reports"
>
  Mock Child
  <DetailHeader
    onActionButtonClick={[Function]}
    text=" Member(s)"
    userHasUpdatePermission={true}
  />
  <_class
    deleteSubEntity={[Function]}
    fields={Array []}
    items={
      Array [
        Object {
          "firstName": "mockFirstName",
          "id": "mockId",
          "lastName": "mockLastName",
          "name": "mockName",
          "status": "enabled",
        },
      ]
    }
    userHasUpdatePermission={true}
  />
</styled.div>
`;

exports[`<DataAccessReportsDetailsPanel /> renders DataAccessReports detailsPanel with no update permision 1`] = `
<styled.div
  id="dtpanel-data-access-reports"
>
  Mock Child
  <DetailHeader
    onActionButtonClick={[Function]}
    text=" Member(s)"
    userHasUpdatePermission={false}
  />
  <_class
    deleteSubEntity={[Function]}
    fields={Array []}
    items={
      Array [
        Object {
          "firstName": "mockFirstName",
          "id": "mockId",
          "lastName": "mockLastName",
          "name": "mockName",
          "status": "enabled",
        },
      ]
    }
    userHasUpdatePermission={false}
  />
</styled.div>
`;
